[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "01_clinical_data_governance_validation_platform"
version = "0.1.0"
description = "Hiring-focused industrial bioinformatics project"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
